[package]
name = "write-monitor"
version = "0.1.0"
edition = "2021"
description = "Monitor the number of bytes being written"
documentation = "https://docs.rs/write-monitor"
homepage = "https://github.com/uttarayan21/write-monitor"
repository = "https://github.com/uttarayan21/write-monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", optional = true }
tokio = { version = "1.32.0", optional = true }
pin-project = { version = "1.1.3", optional = true }

[features]
default = ["std"]
futures = ["dep:futures", "dep:pin-project"]
tokio = ["dep:tokio", "dep:pin-project", "std"]
std = []
