[package]
name = "write-monitor"
version = "0.0.1-alpha.2"
edition = "2021"
description = "Monitor the number of bytes being written"
license = "MIT"
documentation = "https://docs.rs/write-monitor"
homepage = "https://github.com/uttarayan21/write-monitor"
repository = "https://github.com/uttarayan21/write-monitor"

[dependencies]
futures = { version = "0.3.28", optional = true }
tokio = { version = "^1", optional = true }
pin-project = { version = "1.1.3", optional = true }

[features]
default = ["std"]
futures = ["dep:futures", "dep:pin-project"]
tokio = ["dep:tokio", "dep:pin-project", "std"]
std = []
